manifests/media/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - image: hotio/radarr
        name: radarr
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: media-store
          mountPath: /media
        - name: radarr-appdata
          mountPath: /config
      volumes:
        - name: media-store
          nfs:
            server: nas.lan
            path: /mass-zfs-unreliable/media
        - name: radarr-appdata
          persistentVolumeClaim:
            claimName: radarr-appdata
